--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,28 @@
 {
   "name": "todo-app-backend",
   "version": "1.0.0",
-  "description": "Backend for ToDo list app using json-server, Express, and TypeScript",
+  "description": "Backend for ToDo list app using Express, Mongoose, and TypeScript",
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "tsc --watch & nodemon dist/server.js",
     "start:api": "node dist/server.js",
-    "prestart:api": "npm run build"
+    "prestart:api": "npm run build",
+    "dev": "tsc --watch & nodemon dist/server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "json-server": "^0.17.4"
+    "mongoose": "^8.0.0",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.0.0",
+    "winston": "^3.8.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
-    "@types/json-server": "^0.14.7",
+    "@types/mongoose": "^5.11.97",
+    "@types/helmet": "^4.0.0",
+    "@types/express-rate-limit": "^6.0.0",
     "@types/node": "^20.10.0",
     "nodemon": "^3.0.1",
     "typescript": "^5.2.2"
