--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,10 +1,20 @@
 server {
-  listen 80;
-  server_name todo-app.com;
-  root /path/to/frontend/dist/todo-app-frontend;
-  index index.html;
+    listen 80;
+    server_name localhost;
 
-  location /api/ {
-    proxy_pass http://localhost:3000;
-  }
+    root /usr/share/nginx/html;
+    index index.html;
+
+    # Serve Angular app
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy API requests to backend
+    location /api/ {
+        proxy_pass http://backend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
